syntax = "proto3";

option csharp_namespace = "AuctionService.Protos";

service GrpcAuction {
    rpc GetAuction (GrpcAuctionRequest) returns (GrpcAuctionResponse);
}

message GrpcAuctionRequest {
    string auctionId = 1;
}

message GrpcAuctionModel {
    string id = 1;
    string seller = 2;
    string auctionEnd = 3;
    int32 reservePrice = 4;
}

message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}